fix:Readjust gap and padding to self check

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -17,12 +17,12 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   align-items:center;
-  padding:10px;
+  padding:8px;
 }
 
 ul, .header, .right-hand-side {
   display:flex;
-  gap:20px;
+  gap:16px;
 }
 
 .profile-image {
